fixes right align of film image

--- a/css/main.css
+++ b/css/main.css
@@ -102,6 +102,11 @@ body {background-color: #ededed; color: #92A8D1; width: 900px; margin: 0 auto; p
 .libraryText img {
 	width: 50px;
 	height: 50px;
+	text-align: right;
+}
+
+.rightImg {
+	text-align: right;
 }
 
 .verticalAccordion>ul>li {
